# rand-task

./: .gitignore  Cargo.toml  README.md  rand-task.env
src/: lib.rs  main.rs  record.rs  util.rs
src/cli/: add.rs  classify.rs  complete.rs  get.rs  impromptu.rs  list.rs  mod.rs  rt.rs  schedule.rs  search.rs  select.rs  today.rs  update.rs  util.rs
src/cli/page/: complete_task.rs  ctrlc_page.rs  finish_task.rs  landing_page.rs  mod.rs  modify_weight.rs  report_use_rate.rs  tick_tock.rs  time_span.rs
src/cli/task/: add.rs  complete.rs  mod.rs  top.rs  update.rs
src/config/: mod.rs
src/dao/: mod.rs  project_dao.rs  record_dao.rs  task_dao.rs
src/entity/: mod.rs  projects.rs  records.rs  tasks.rs
src/view/: project_view.rs  task_view.rs
