[package]
name = "rand-task"
version = "1.1.0"
edition = "2021"

[lib]
name = "rtdb"

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.15", features = ["derive"] }
ctrlc = "3.2.3"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = "0.11.12"
sea-orm = { version = "0.9.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print"] }
termcolor = "1.1.3"
time = "0.3.16"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time"] }
wait-timeout = "0.2.0"
